$Id: History,v 1.18 1999-05-28 23:34:49 lockman Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------

g3tog4-01-00-06 28-May-1999 Lockman
- ~G3Mat,MedTable: do not destroy G4Material Objects in list. Do a clear()
  of the list, not clearAndDestroy, then delete the list.
- ~G3Rot,Vol,Part,EleTable: standardize printout, fix deallocation
- G3VolTable: changed PutVTE to take a VolTableEntry*; added ListVTE method
- G3toG4MakeSolid: added G4bool* OKAxis
- VolTableEntry: added _OKAxis[3] to store which axes may be divided;
  added AddMother(VolTableEntry*), GetMother(), _Mother.
- G3toG4MakeSolid: set OKAxis
- G3toG4EventAction: BeginOfEventAction, EndOfEventAction signature mods
- G3toG4RunAction: BeginOfRunAction, EndOfRunAction signature mods
- G3toG4PhysicsList: SetCuts signature mod
- G3toG4PrimaryGeneratorAction: randomize paricle direction

27-May-1999 Cosmo
- Fixed circular dependencies in G3Pos - VolTableEntry - G3VolTable.
- Added default empty constructor to G3Vol.
- Removed cleantest from "clean" target in GNUmakefile.

g3tog4-01-00-05 Lockman
- G3G4Interface: G4Strings passed by reference in G4gspos, G4gsposp
- G3PartTable: now uses RWTPtrHashDictionary instead of RWGDList
- G3RotTable: method name "get" changed to "Get". Space for unit rotation
  matrix at element 0 in RWTPtrOrderedVector. This matrix is instantiated
  in G4BuildGeom prior to call list read.
- G3VolTable: many new methods to handle VolTableEntry and G3Pos objects.
  removed GetPV method.
- G3toG4.hh: removed G3NegVolPars method
- G3DetTable: commented out some G4cerr's
- G3EleTable: some minor internal changes
- G3PartTable: convert to use RWTPtrHashDictionary
- Added G3Pos class
- Added G3toG4BuildTree which calls G4LogicalVolume and G4PVPlacement based on
  G3VolTable
- G4BuildGeom: invokes G3toG4BuildTree to build VolTableEntry tree