@@ -8,19 +8,20 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3MedTable.hh,v 1.3 1999-05-06 18:01:50 lockman Exp $
+// $Id: G3MedTable.hh,v 1.4 1999-07-20 14:16:23 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
 // Maps G3 tracking media indices to G4Material*
 
-#include <rw/tpordvec.h>
-
+#include <rw/tphdict.h>
 class G4Material;
 
 class G3MedTable {
 private:
-  RWTPtrOrderedVector<G4Material>* _Med;
+  RWTPtrHashDictionary<G4String, G4Material>* _Med;
+  void HashID(G4int matid, G4String* _HID);
+  void HashID(G4int matid, G4String& _HID);
 public:
   G3MedTable();
   ~G3MedTable();
