@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4gsrotm.cc,v 1.4 1999-05-26 03:50:18 lockman Exp $
+// $Id: G4gsrotm.cc,v 1.5 1999-07-20 14:16:59 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #include "G4ThreeVector.hh"
@@ -71,7 +71,7 @@ void G4gsrotm(G4int irot, G4double theta1, G4double phi1,
     
         // add it to the List
 
-    G3Rot.Put(irot, rotp);
+    G3Rot.put(irot, rotp);
 }
 
 
